@startuml Diagrama de Clases
!pragma layout smetana

'Primeras relaciones'
package "banda" {
    class Musico  {
        -nombre: str
        -instrumento: Instrumento

        +__init__(self, nombre: str)
        +tocar()
        +afinar()
        +setInstrumento(instrumento: Instrumento)
    }

    class Banda {
        -instrumentos: Instrumento
        -musicos: Musico

        +__init__(self, instrumentos: Instrumento, musicos: Musico)
        +llamarMusicosAleatorio(): Musico
        +getMusicos(): Musico
    }

    package "instrumento" {
        class Guitarra {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Trompeta {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Violin  {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Piano  {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Saxofon  {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Bajo  {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Xilofono  {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Flauta  {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Bateria  {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        class Acordeon  {
            +ajustarFrecuencias()
            +emitirSonido()
        }

        note as nota1
            El paquete instrumento está
            representado por el archivo
            instrumento.py
        end note
    }

    Banda o-- Musico
}

package "interfaces" {
    interface Instrumento {
        +{abstract} ajustarFrecuencias()
        +{abstract} emitirSonido()
    }
}

class Main {
    + {static} main()
}


'Terceras relaciones'
Main <. banda.Banda

interfaces.Instrumento <-o banda.Musico
interfaces.Instrumento --o banda.Banda

interfaces.Instrumento <|.. banda.instrumento

@enduml
